# nemora

./: .gitignore  .readthedocs.yaml  CHANGE_LOG.md  CODING_AGENT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  candidate-import-from-ForestFit-features.md  pyproject.toml
.github/workflows/: nightly-ingest.yml
docs/: conf.py  contributing-guide.md  index.md  overview.md  requirements.txt  roadmap.md
docs/_static/: reference_hps_parity_table.csv
docs/_static/css/: custom.css
docs/api/: dbhdistfit.md  distfit.md  index.md  nemora.md
docs/howto/: contributing.md  custom_distributions.md  hps_api.md  hps_dataset.md  hps_workflow.md  index.md  ingest.md  sampling.md
docs/reference/: distfit.md  distributions.md  index.md
examples/: hps_bc_psp_demo.ipynb  hps_parity_demo.ipynb  hps_parity_reference.ipynb
examples/data/reference_hps/: binned_meta_plots.csv
examples/faib_manifest/: faib_manifest.csv  stand_table_baf12.csv
notes/: fia_ingest_scoping.md  ingest_pipeline_outline.md  johnsonsb_bs_em_plan.md  nemora_modular_reorg_plan.md  sampling_module_outline.md  sampling_module_plan.md  weibull_em_next_steps.md  weibull_em_prototype.py  weibull_em_references.md
r/nemorar/: DESCRIPTION  NAMESPACE
r/nemorar/R/: zzz.R
r/nemorar/tests/: testthat.R
reference-papers/: PSP_data_dictionary_20250514.xlsx
scripts/: generate_faib_manifest.py  prepare_hps_dataset.py
src/dbhdistfit/: __init__.py  cli.py  typing.py
src/dbhdistfit/distributions/: __init__.py  base.py  generalized_beta.py
src/dbhdistfit/fitting/: __init__.py  grouped.py
src/dbhdistfit/workflows/: __init__.py  censoring.py  hps.py
src/nemora/: __init__.py  cli.py  typing.py  weighting.py
src/nemora/core/: __init__.py
src/nemora/dataprep/: __init__.py  hps.py
src/nemora/distfit/: __init__.py  grouped.py  mixture.py
src/nemora/distributions/: __init__.py  base.py
src/nemora/fitting/: __init__.py  mixture.py
src/nemora/ingest/: __init__.py  faib.py  fia.py  hps.py
src/nemora/sampling/: __init__.py
src/nemora/workflows/: censoring.py  hps.py
tests/: test_censored_workflow.py  test_cli.py  test_distfit_module.py  test_grouped.py  test_grouped_fixtures.py  test_hps_dataset.py  test_hps_parity.py  test_ingest_faib.py  test_ingest_fia.py  test_ingest_pipeline.py  test_mixture.py  test_registry.py  test_sampling.py
tests/fixtures/faib/: faib_sample_byvisit.csv  faib_tree_detail.csv
tests/fixtures/hps/: meta_censored.csv
